--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Beha-coder",
-    "slug": "Beha-coder",
+    "slug": "beha-coder",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/logo.jpg",
@@ -11,13 +11,21 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "y"
     },
     "android": {
-      "adaptiveIcon": {}
+      "adaptiveIcon": {},
+      "package": "com.asomiddin_004.Behacoder"
     },
     "web": {
       "favicon": "./assets/logo.jpg"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "584e28d6-4aec-4505-bd47-3eb1bf706790"
+      }
+    },
+    "owner": "asomiddin_004"
   }
 }
