--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.1",
-    "react-native-webview": "^13.6.2",
+    "react-native-webview": "13.2.2",
     "react-native-youtube-iframe": "^2.3.0",
     "tailwindcss": "^3.3.2",
     "expo-splash-screen": "~0.20.5"
